new commission style

--- a/atlas/templates/login.html
+++ b/atlas/templates/login.html
@@ -8,3 +8,21 @@
 <img src="{% static "images/logo_en.gif" %}"/>
 <h1 id="site-name">Welcome to The JRC Global Crisis Atlas</h1>
 {% endblock %}
+{% block footer %}
+<div class="footer">
+<p>The Global Crisis Atlas is a service of the Commission that provides a catalogue of digital maps produced by its in-house science service, the Joint Research Centre, to meet the needs of the European External Action service (EEAS) and the Service for Foreign Policy Instruments (FPI). The service is financed by the Instrument contributing to Stability and Peace.</p><br>
+ 
+<p>The maps (usually printable in A3, A4 format) are at country or regional level and are split into the following categories:<br>
+ 
+<strong>Baseline</strong> (Country political maps or similar)<br>
+<strong>Natural Hazard</strong> (maps related to natural disasters e.g. floods, earthquake…)<br>
+<strong>Armed conflict</strong> (maps related to conflict)<br>
+<strong>Security</strong> (maps related to security issues)<br>
+<strong>Thematic</strong> (maps where a particular theme is represented e.g. ethnicity)<br>
+<strong>Policy</strong> (generic maps with basic information related to policy implementation)</p><br>
+ 
+<p>The Global Crisis Atlas is intended to increase the awareness of geographic and crisis related issues, to provide the information basis to support decision making in potential crisis situations and in planning projects.<br>
+The website is password protected, you must login first.</p><br>
+<p>For any comments/suggestions please write to <a href="mailto:gemma@jrc.ec.europa.eu">gemma@jrc.ec.europa.eu</a></p>
+</div>
+{% endblock %}
