no bottom margin in services

--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -343,7 +343,7 @@ h1 {
 }
 
 #services{
-  font-size:90%;font-weight:normal;position:absolute;left:0;top:2px;right:0;padding:1px 50px 1px 1px;text-align:right;}
+  font-size:90%;font-weight:normal;position:absolute;left:0;top:2px;right:0;padding:1px 50px 1px 1px;text-align:right;margin-bottom: 0px;}
 #services li{display:inline;padding:3px 0;}
 #services a,
 #services a:focus,
