--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -35,10 +35,13 @@
       <header class="header">
         <ul class="reset-list" id="services">
           <li>
-            <a href="http://ec.europa.eu/geninfo/legal_notices_en.htm">Legal Notes</a>
+            <a href="http://ec.europa.eu/geninfo/legal_notices_en.htm">Legal Notes</a> |
           </li>
           <li>
-            <a href="mailto:gemma@jrc.ec.europa.eu">Contact Us</a>
+            <a href="mailto:gemma@jrc.ec.europa.eu">Contact Us</a> |
+          </li>
+          <li>
+            <a href="help">Help</a>
           </li>
         </ul>
         <p class="banner-flag">
