--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -1,13 +1,11 @@
 {% load staticfiles %}
 {% load bootstrap_tags %}
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+  <html class="">   
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=9">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Global Crisis Atlas</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
