add legal notes at login

--- a/atlas/templates/login.html
+++ b/atlas/templates/login.html
@@ -24,5 +24,6 @@
 <p>The Global Crisis Atlas is intended to increase the awareness of geographic and crisis related issues, to provide the information basis to support decision making in potential crisis situations and in planning projects.<br>
 The website is password protected, you must login first.</p><br>
 <p>For any comments/suggestions please write to <a href="mailto:gemma@jrc.ec.europa.eu">gemma@jrc.ec.europa.eu</a></p>
+<a href="http://ec.europa.eu/geninfo/legal_notices_en.htm">Legal Notes</a>
 </div>
 {% endblock %}
