--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -22,6 +22,7 @@
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="{% static "styles/main.css" %}">
+    <link rel="icon" href="{% static "images/favicon.ico" %}">
     <!-- endbuild -->
   </head>
   <body ng-controller="AtlasController">
