--- a/atlas/templates/login.html
+++ b/atlas/templates/login.html
@@ -1,7 +1,10 @@
 {% extends "admin/login.html" %}
 {% load staticfiles %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "styles/login.css" %}" />{% endblock %}
+{% block extrastyle %}{{ block.super }}
+<link rel="stylesheet" type="text/css" href="{% static "styles/login.css" %}" />
+<link rel="icon" href="{% static "images/favicon.ico" %}">
+{% endblock %}
 
 {% block title %}JRC Global Crisis Atlas{% endblock %}
 {% block branding %}
