--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -357,3 +357,11 @@ h1 {
 
 .font-size-2 #services{padding-right:150px;}
 .font-size-3 #services{padding-right:172px;}
+
+#services .login{
+  border: 1px solid #ccc;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
