add related links in login page

--- a/atlas/templates/login.html
+++ b/atlas/templates/login.html
@@ -77,6 +77,18 @@ The website is password protected, you must login first.</p><br>
 <p>For any comments/suggestions or ask for login credentials please write to <a href="mailto:gemma@jrc.ec.europa.eu">gemma@jrc.ec.europa.eu</a></p>
 <a href="http://ec.europa.eu/geninfo/legal_notices_en.htm">Legal Notes</a>
 </div>
+<div id="external-links">
+    <label>Related links</label>
+    <ul>
+        <li><a target="blank" href="http://emergency.copernicus.eu">- Copernicus Emergency Management Service</a></li>
+        <li><a target="blank" href="http://ercportal.jrc.ec.europa.eu/Maps/Daily-maps-catalogue">- ERCC daily maps</a></li>
+        <li><a target="blank" href="http://ercportal.jrc.ec.europa.eu/Maps/Base-maps-catalogue">- ERCC base maps</a></li>
+        <li><a target="blank" href="http://reliefweb.int/maps">- Reliefweb catalogue</a></li>
+        <li><a target="blank" href="http://reliefweb.int/updates?search=&sl=environment-report_listing%252Ctaxonomy_index_tid_source-1503%252Ctaxonomy_index_tid_content_format-12">- OCHA maps</a></li>
+        <li><a target="blank" href="http://www.un.org/depts/Cartographic/english/htmain.htm">- UN Cartographic Section</a></li>
+        <li><a target="blank" href="http://www.mapaction.org/map-catalogue.html">- MapAction</a></li>
+    </ul>
+</div>
 <script type="text/javascript">
 document.getElementById('id_username').focus()
 </script>
