--- a/static/app/styles/login.css
+++ b/static/app/styles/login.css
@@ -79,3 +79,19 @@
     clear: both;
     padding: 1em 0 0 4.5em;
 }
+
+#external-links{
+    float: left;
+    width: 200px;
+    height: 200px;
+    margin-left: 1.5em;
+    margin-top: 1.5em;
+
+}
+
+#external-links li{
+  list-style-type: none;
+  font-size: 90%;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
