add some meta tags

--- a/atlas/templates/login.html
+++ b/atlas/templates/login.html
@@ -10,7 +10,10 @@
 <link rel="icon" href="{% static "images/favicon.ico" %}">
 
 {% endblock %}
-
+{% block blockbots %}
+<meta name="keywords" content="global crisis atlas, atlas, maps, european commission, jrc, emergency, crisis, global" />
+<meta name="Description" content="European Commission's Global Crisis Atlas" />
+{% endblock %}
 {% block breadcrumbs %}{% endblock %}
 
 {% block title %}JRC Global Crisis Atlas{% endblock %}
