--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -13,7 +13,7 @@ body {
   width: 984px;
   height: 650px;
   margin: 0 auto 0;
-  padding-top: 30px;
+  padding-top: 10px;
   padding-left: 10px;
   padding-right: 10px;
   border:1px solid #369
@@ -364,4 +364,25 @@ h1 {
   padding-right: 10px;
   margin-left: 5px;
   margin-right: 5px;
+}
+
+#latest_maps{
+  height: 20px;
+  padding-bottom: 30px;
+}
+
+.latest_map{
+  width: 150px;
+  float: left;
+  padding-left: 40px;
+  padding-right: 40px;
+  border-right: 1px solid gray;
+}
+
+.carousel-inner{
+  width: auto;
+}
+
+.carousel-container{
+  float: left;
 }
