--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -377,6 +377,7 @@ h1 {
   padding-left: 30px;
   padding-right: 20px;
   border-right: 1px solid gray;
+  text-align: center;
 }
 
 .carousel-inner{
