--- a/atlas/templates/login.html
+++ b/atlas/templates/login.html
@@ -84,7 +84,7 @@ The website is password protected, you must login first.</p><br>
     <label>Related links</label>
     <ul>
         <li><a target="blank" href="http://emergency.copernicus.eu">- Copernicus Emergency Management Service</a></li>
-        <li><a target="blank" href="http://ercportal.jrc.ec.europa.eu/Maps/Daily-maps-catalogue">- ERCC daily maps</a></li>
+        <li><a target="blank" href="http://erccportal.jrc.ec.europa.eu/Maps/DailyMapArchive">- ERCC daily maps</a></li>
         <li><a target="blank" href="http://ercportal.jrc.ec.europa.eu/Maps/Base-maps-catalogue">- ERCC base maps</a></li>
         <li><a target="blank" href="http://reliefweb.int/maps">- Reliefweb catalogue</a></li>
         <li><a target="blank" href="http://reliefweb.int/updates?search=&sl=environment-report_listing%252Ctaxonomy_index_tid_source-1503%252Ctaxonomy_index_tid_content_format-12">- OCHA maps</a></li>
