update keywords and login title

--- a/atlas/templates/login.html
+++ b/atlas/templates/login.html
@@ -11,12 +11,12 @@
 
 {% endblock %}
 {% block blockbots %}
-<meta name="keywords" content="global crisis atlas, atlas, maps, european commission, jrc, emergency, crisis, global" />
+<meta name="keywords" content="global crisis atlas, atlas, maps, european commission, jrc, emergency, crisis, global atlas" />
 <meta name="Description" content="European Commission's Global Crisis Atlas" />
 {% endblock %}
 {% block breadcrumbs %}{% endblock %}
 
-{% block title %}JRC Global Crisis Atlas{% endblock %}
+{% block title %}European Commission's Global Crisis Atlas{% endblock %}
 {% block messages %}
 <header class="header">
     <p class="banner-flag">
