add description to help

--- a/maps/templates/help.html
+++ b/maps/templates/help.html
@@ -4,6 +4,7 @@
     <title>Global Crisis Atlas</title>
 </head>
 <body>
+    <img style="position: relative; left: 30%; border: 1px solid grey; padding: 30px; margin-bottom: 20px" src="{% static "images/description.png" %}">
     <img style="position: relative; left: 10%;" src="{% static "images/help.png" %}">
 </body>
 </html>
