so overflow on the right div

--- a/maps/templates/index.html
+++ b/maps/templates/index.html
@@ -79,7 +79,7 @@
               <div id="country_select" ui-select2="select2Options" ng-model="select2" placeholder="Type to search" ng-controller="CountrySelectController">
               </div>
             </div>
-            <div class="pull-left search_block" id="regions">
+            <div class="pull-left search_block">
               <label>Or by Region</label>
               <ul class="search_filter single_choice" id="regions" single-choice-directive>
                 {% for region in regions %}
